# ClinicalTrial-KnowledgeMining

./: .env.example  .env.medspacy  .gitignore  CLI_GUIDE.md  CLI_QUICKREF.md  DEMO_QUESTIONS.md  GPT5_MINI_TEST_RESULTS.md  QUICKSTART.md  README.md  WORKSPACE_STRUCTURE.md  pixi.toml  pyproject.toml  query_clinical_trials.py  query_result.json  start_ui.sh  test_context_aware_extraction.py  test_gpt5_adverse.py  test_gpt5_mini_vision.py  test_model_router.py  test_simple_gpt5.py  test_u_retrieval.py  test_u_retrieval_debug.py
.github/: copilot-instructions.md
data/: DV07_extracted.md  DV07_extracted_text.txt
docs/: ARCHITECTURE_DEEP_DIVE.md  CLI_ENHANCEMENT_SUMMARY.md  Clinical_Trial_Knowledge_Mining_TRD_Modular.md  DOCUMENTATION_CLEANUP_SUMMARY.md  ENTITY_NORMALIZATION_GUIDE.md  ENTITY_TYPE_PROBLEM_ANALYSIS.md  EVIDENCE_BASED_RECOMMENDATION.md  Evaluation_Metrics_Guide.md  MODEL_ROUTER_GUIDE.md  MODULAR_MAX_CLEANUP_SUMMARY.md  MODULAR_MAX_STATUS.md  MULTIMODAL_CAPABILITIES.md  PRODUCTION_LANGUAGE_CLEANUP.md  QUERY_ARCHITECTURE.md  QUERY_REWRITING_GUIDE.md  QUERY_REWRITING_QUICKREF.md  README.md  SYSTEM_ARCHITECTURE.md  URETRIEVAL_ARCHITECTURE.md  clinical-trial-mining-prd (1).md  docling_parsing_architecture.md  performance_optimizations_implemented.md  query_architecture.md
examples/: model_router_example.py
logs/: vocabulary_validation.txt
schema/: add_source_chunk_id_migration.sql  knowledge_graph_schema.sql  simple_schema.sql
scripts/: analyze_real_data.py  build_knowledge_graph.py  check_normalization_progress.sh  create_normalization_indexes.sql  (+22 more)
(+139 files in other folders)
