[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docintel"
version = "0.1.0"
description = "Clinical trial knowledge mining platform"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [{name = "Clinical Trial Knowledge Mining Team"}]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: Other/Proprietary License",
  "Operating System :: POSIX :: Linux",
]
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
include = ["docintel", "docintel.*"]
